+ minor fixes (lesson1)